--- a/security/src/main/resources/application.properties
+++ b/security/src/main/resources/application.properties
@@ -3,3 +3,11 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=security
+
+logging.level.org.springframework.security=DEBUG
+
+# logging.level.org.springframework=TRACE
+
+logging.level.com.sriharyi=DEBUG
+
+# -Dlogging.level.org.springframework.security=TRACE
